--- a/Glimpse.xcodeproj/xcshareddata/xcschemes/WatchWidget.xcscheme
+++ b/Glimpse.xcodeproj/xcshareddata/xcschemes/WatchWidget.xcscheme
@@ -44,7 +44,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2741EA0E2BD8AEBA003EDEB2"
-               BuildableName = "Watch.app"
+               BuildableName = "Glimpse.app"
                BlueprintName = "Watch"
                ReferencedContainer = "container:Glimpse.xcodeproj">
             </BuildableReference>
