--- a/Glimpse.xcodeproj/xcshareddata/xcschemes/WatchWidget.xcscheme
+++ b/Glimpse.xcodeproj/xcshareddata/xcschemes/WatchWidget.xcscheme
@@ -102,7 +102,7 @@
          </EnvironmentVariable>
          <EnvironmentVariable
             key = "_XCWidgetFamily"
-            value = "systemMedium"
+            value = "accessoryRectangular"
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
