--- a/Glimpse.xcodeproj/xcshareddata/xcschemes/WatchWidget.xcscheme
+++ b/Glimpse.xcodeproj/xcshareddata/xcschemes/WatchWidget.xcscheme
@@ -70,8 +70,9 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "2">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2741EA242BD8AF08003EDEB2"
@@ -79,7 +80,7 @@
             BlueprintName = "WatchWidget"
             ReferencedContainer = "container:Glimpse.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
@@ -92,7 +93,7 @@
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "_XCWidgetKind"
-            value = ""
+            value = "GlimpseChartWidget"
             isEnabled = "YES">
          </EnvironmentVariable>
          <EnvironmentVariable
