--- a/Glimpse.xcodeproj/xcshareddata/xcschemes/GlimpseWidget.xcscheme
+++ b/Glimpse.xcodeproj/xcshareddata/xcschemes/GlimpseWidget.xcscheme
@@ -80,7 +80,7 @@
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "_XCWidgetKind"
-            value = ""
+            value = "GlimpseReadingWidget"
             isEnabled = "YES">
          </EnvironmentVariable>
          <EnvironmentVariable
@@ -90,7 +90,7 @@
          </EnvironmentVariable>
          <EnvironmentVariable
             key = "_XCWidgetFamily"
-            value = "accessoryRectangular"
+            value = "systemSmall"
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
