--- a/Glimpse.xcodeproj/xcshareddata/xcschemes/WatchWidget.xcscheme
+++ b/Glimpse.xcodeproj/xcshareddata/xcschemes/WatchWidget.xcscheme
@@ -70,9 +70,8 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "2">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2741EA242BD8AF08003EDEB2"
@@ -80,7 +79,7 @@
             BlueprintName = "WatchWidget"
             ReferencedContainer = "container:Glimpse.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
+      </BuildableProductRunnable>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
