--- a/Glimpse.xcodeproj/xcshareddata/xcschemes/GlimpseWidget.xcscheme
+++ b/Glimpse.xcodeproj/xcshareddata/xcschemes/GlimpseWidget.xcscheme
@@ -80,7 +80,7 @@
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "_XCWidgetKind"
-            value = "GlimpseReadingWidget"
+            value = "GlimpseChartWidget"
             isEnabled = "YES">
          </EnvironmentVariable>
          <EnvironmentVariable
