--- a/Glimpse.xcodeproj/xcshareddata/xcschemes/GlimpseWidget.xcscheme
+++ b/Glimpse.xcodeproj/xcshareddata/xcschemes/GlimpseWidget.xcscheme
@@ -90,7 +90,7 @@
          </EnvironmentVariable>
          <EnvironmentVariable
             key = "_XCWidgetFamily"
-            value = "systemSmall"
+            value = "accessoryRectangular"
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
