Graph design updates

--- a/Glimpse.xcodeproj/xcshareddata/xcschemes/GlimpseWidget.xcscheme
+++ b/Glimpse.xcodeproj/xcshareddata/xcschemes/GlimpseWidget.xcscheme
@@ -90,7 +90,7 @@
          </EnvironmentVariable>
          <EnvironmentVariable
             key = "_XCWidgetFamily"
-            value = "accessoryRectangular"
+            value = "systemSmall"
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
@@ -103,16 +103,17 @@
       debugDocumentVersioning = "YES"
       askForAppToLaunch = "Yes"
       launchAutomaticallySubstyle = "2">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.springboard">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "27F577662BCF38330012D66C"
-            BuildableName = "Glimpse.app"
-            BlueprintName = "Glimpse"
+            BlueprintIdentifier = "2703324C2BD99E90009535EE"
+            BuildableName = "GlimpseWidget.appex"
+            BlueprintName = "GlimpseWidget"
             ReferencedContainer = "container:Glimpse.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
