--- a/Luka/Info.plist
+++ b/Luka/Info.plist
@@ -6,5 +6,7 @@
 	<false/>
 	<key>NSSupportsLiveActivities</key>
 	<true/>
+	<key>NSSupportsLiveActivitiesFrequentUpdates</key>
+	<true/>
 </dict>
 </plist>
