Don't update activity unless recent

--- a/Luka.xcodeproj/xcshareddata/xcschemes/LukaWidget.xcscheme
+++ b/Luka.xcodeproj/xcshareddata/xcschemes/LukaWidget.xcscheme
@@ -44,6 +44,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "276485FD2F1C65AF00CFEFC9"
+               BuildableName = "LukaTests.xctest"
+               BlueprintName = "LukaTests"
+               ReferencedContainer = "container:Luka.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
